Add hover effect successfully

--- a/index.html
+++ b/index.html
@@ -68,16 +68,13 @@
             </div>
             <div class="navbar-end hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-
                     <li> 
-        
                             <a onclick="loadData('Potato')">
                                 <i class="fa-solid fa-seedling"></i> 
                                Potato  
                             </a>         
                     </li>
-                    <li>
-                     
+                    <li>       
                             <a onclick="loadData('Soup')">
                                 <i class="fa-solid fa-bowl-food"></i>
                                 Soup               
@@ -202,7 +199,7 @@
     <main>
 
         <!-- Grid Section Start -->
-        <section>
+        <section class="mt-10" onload="initialLoadData()">
             <div id="resultContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
 
             </div>
