--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="hero-overlay bg-opacity-60"></div>
                     <div class="hero-content text-neutral-content text-center">
                         <div class="max-w-md">
-                            <h1 class="mb-5 text-4xl"> <span class="font-bold text-black text-2xl"> Food Name: </span>
+                            <h1 class="mb-5 text-2xl"> <span class="font-bold text-2xl"> Food Name: </span>
                                 Perfect Crispy French Fries </h1>
                             <p class="mb-5">
                                 <span class="font-bold text-blue-800"> Description: </span>
